# mysql-sample-export

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: build-macos.yml
scripts/: normalize-windows-msi.ps1  package-windows-portable.ps1
src/: App.css  App.tsx  api.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: connections.rs  database.rs  lib.rs  main.rs  types.rs
src-tauri/wix/: zh-CN.wxl
src/components/: ConnectionForm.tsx  DatabaseList.tsx  ExportDialog.tsx  TableDetail.tsx  TableList.tsx
